fix asset urls for gh deployment

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="A simpler, more sustainable way of web development."
     />
 
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="splash-screen">
@@ -22,6 +22,6 @@
       </p>
     </div>
 
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
