--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="splash-screen">
       <h1 class="title">Vanilla Prime</h1>
-      <p class="claim">&mdash; A simpler way of web development &mdash;</p>
+      <p class="claim">A simpler way of web development</p>
       <p class="link">
         <a href="https://github.com/morris/vanilla-prime">Learn more</a>
       </p>
